--- a/raggish/app/views/main.html
+++ b/raggish/app/views/main.html
@@ -2,7 +2,7 @@
   <table>
     <tr ng-repeat="i in [] | range:16">
       <td ng-repeat="j in [] | range:21">
-        <div class="square-{{hands[0][j][i]}} right-{{j%2}}" ng-click="switchNote(0,j,i)"></div>
+        <div class="square-{{ isRightOn(j,i) }} right-{{j%2}}" ng-click="switchNote(0,j,i)"></div>
       </td>
     </tr>
   </table>
@@ -10,8 +10,8 @@
   
   <table>
     <tr ng-repeat="i in [] | range:16">
-      <td ng-repeat="j in [] | range:32">
-        <div class="square-{{hands[1][j][i]}}" ng-click="switchNote(1,j,i)"></div>
+      <td ng-repeat="j in [] | range:4">
+        <div class="left-square-{{ isLeftOn(j,i) }}" ng-click="switchNote(1,j,i)"></div>
       </td>
     </tr>
   </table>
@@ -20,5 +20,4 @@
     <img src="assets/img/play.png" height="25" width="25" ng-click="clickPlay()"></img>
     <img src="assets/img/stop.png" height="25" width="25" ng-click="stop()"></img>
   </center>
-  
 </div>
